--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,15 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.codingame.com/*"],
-      "css": ["src/styles.css"],
-      "js": ["src/content.js"]
+      "matches": [
+        "https://www.codingame.com/*"
+      ],
+      "css": [
+        "src/styles.css"
+      ],
+      "js": [
+        "src/content.js"
+      ]
     }
   ]
 }
