--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "CodinGame Pro Layout",
   "version": "2.2",
-  "description": "Remove the redundant Code Editor and replace it with a larger Console view.",
+  "description": "Overhauls the CodinGame IDE with a cleaner layout and adds automatic code synchronization.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
