--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "CodinGame Pro Layout",
-  "version": "2.2",
+  "name": "CodinGame Pro Mode",
+  "version": "3.0",
   "description": "Overhauls the CodinGame IDE with a cleaner layout and adds automatic code synchronization.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "permissions": [
+    "storage"
+  ],
+  "action": {
+    "default_popup": "src/popup.html",
+    "default_icon": {
+      "48": "icons/icon48.png"
+    }
   },
   "content_scripts": [
     {
