--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "CodinGame Pro Mode",
   "version": "3.2",
-  "description": "Overhauls the CodinGame IDE with a cleaner layout and adds automatic code synchronization.",
+  "description": "Optimize the CodinGame UI and add seamless code synchronization.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
